--- a/web.xml
+++ b/web.xml
@@ -11,7 +11,7 @@
 
   <servlet-mapping>
     <servlet-name>NewServlet</servlet-name>
-    <url-pattern>*.do</url-pattern>
+    <url-pattern>/process</url-pattern>
   </servlet-mapping>
 
 
@@ -30,5 +30,28 @@
 <servlet-name>Jersey Web Application</servlet-name>
 <url-pattern>/webapi/*</url-pattern>
 </servlet-mapping>
+
+
+
+  <filter>
+    <filter-name>checkFilter</filter-name>
+    <filter-class>com.arun.checkFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>checkFilter</filter-name>
+    <url-pattern>/webapi/*</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>secondFilter</filter-name>
+    <filter-class>com.arun.secondFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>secondFilter</filter-name>
+    <url-pattern>/webapi/*</url-pattern>
+  </filter-mapping>
+
 
 </web-app>
